add content & refine line height

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -42,6 +42,15 @@ ul, ol, dl, figure,
 /**
  * Images
  */
+p {
+    line-height: 1.7em;
+}
+
+
+
+/**
+ * Images
+ */
 img {
     max-width: 100%;
     vertical-align: middle;
